# job-trend-analyzer-api-cargo-lambda

./: Cargo.toml  README.md  diesel.toml
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
src/db/: connect.rs  models.rs  schema.rs
src/repository/: result.rs  target.rs
src/response/: build.rs  mod.rs  models.rs
