[package]
name = "job-trend-analyzer-api-cargo-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
lambda_http = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
dotenvy = "0.15.7"
futures = "0.3.31"
tracing-subscriber = "0.3.19"
aws-sdk-secretsmanager = "1.57.0"
aws-config = "1.5.13"
percent-encoding = "2.3.1"
tracing = "0.1.41"
